<resources>
    <string name="app_name" translatable="false">PersonalTasks</string>
    <string name="title">Título</string>
    <string name="description">Descrição</string>
    <string name="deadline">Data Limite</string>
    <string name="save">Salvar</string>
    <string name="cancel">Cancelar</string>
    <string name="task_title">Título da Tarefa</string>
    <string name="remove_task">Excluir tarefa</string>
    <string name="edit_task">Editar tarefa</string>
    <string name="new_task">Nova Tarefa</string>
    <string name="details">Detalhes</string>
    <string name="task_removed">Tarefa removida</string>
    <string name="task_list">Lista de Tarefas</string>
    <string name="task_status">Status</string>">
    <string name="email">Email</string>
    <string name="password">Senha</string>
    <string name="enter">Entrar</string>
    <string name="register">Registrar</string>
    <string name="deleted_tasks">Tarefas Excluídas</string>
    <string name="reactivate">Reativar</string>
    <string name="priority">Prioridade</string>
</resources>